# ShoppingBuddy

./: .env.example  .gitignore  README.md  digest.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
agents/: candidateSelector.js  customerProfiler.js  recommendationAgent.js
app/: main.py
app/api/: endpoints.py
app/core/: config.py
app/db/: database.py
app/schemas/: payloads.py
app/services/: agents.py  data_loader.py
app/templates/: index.html
config/: recommenderConfig.js  recommenderConfig.mjs
data_handling/: dataLoader.js
db/: database.js
public/js/: main.js
routes/: index.js
utils/: helpers.js
views/: index.ejs
