[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shopping-buddy"
version = "1.0.0"
description = "Personalized product recommendation engine using LLMs"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi==0.115.2",
  "uvicorn==0.30.6",
  "slowapi==0.1.9",
  "pydantic-settings==2.5.2",
  "google-generativeai==0.7.2",
  "ollama==0.3.3",
  "aiosqlite==0.20.0",
  "jinja2==3.1.4",
]
